# rsvp-ratatui

./: .gitignore  Cargo.toml  Dockerfile  Frankenstein.epub  README.md  docker-compose.yml  test.txt  test2.txt
src/: interface.rs  main.rs  main.rs.11.01.25  main.rs.8.1.25  main.rs.ol  main.rs.old  reading_session.rs  utilities.rs
templates/: index.html
