[package]
name = "rsvp"
version = "1.2.0"
edition = "2021"

[dependencies]
ratatui = "*"
clap="*"
dirs-next="*"
crossterm = "0.26"
epub = "1.0"         # EPUB support
pdf-extract = "0.6"  # PDF text extraction
html5ever = "0.26"   # HTML parsing
pulldown-cmark = "0.9" # Markdown support
scraper = "*"
zip = "0.6"
lopdf = "0.32"
xml-rs = "0.8"     # For ODT XML parsing
serde_json = "*"
once_cell = "1.18"  # ✅ Ensure once_cell is installed
unicode-segmentation = "1.10.1"
tts = "0.26.3"
